--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
 .currency-image {
   margin: 80px;
-  border: 5px solid black;
+  border: 5px solid white;
 }
 
 p {
-  color: white;
+  color: black;
 }
